k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-quarkus
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-quarkus
  template:
    metadata:
      labels:
        app: my-quarkus
    spec:
      containers:
      - name: my-quarkus
        image: abuosi/my-quarkus:1.0
        ports:
        - containerPort: 8080
