k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-quarkus
  annotations:
    dev.okteto.com/auto-ingress: "true"    
spec:
  selector:
    app: my-quarkus
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30003
  type: LoadBalancer
