k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: my-quarkus
spec:
  rules:
  - host: my-quarkus.local
    http:
      paths:
      - backend:
          serviceName: my-quarkus
          servicePort: 80
